--- a/style.css
+++ b/style.css
@@ -1,15 +1,70 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing:border-box;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: montserrat;
+  font-weight: 700;
 }
-.containerList{
-    width: 500px;
-    background-color: #d1d1d1;
-    border-radius: 20px;
-    padding: 20px;
-    margin-top: 100px;
+body {
+  background-image: url(assets/minimalist-landscape-to-1920x1080.jpg);
+
+  background-repeat: no-repeat;
+  background-size: auto;
+  display: flex;
+  justify-content: center;
 }
-img{
-    height: 25px;
+.containerList {
+  width: 500px;
+  background-color: #d1d1d1;
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 100px;
+  opacity: 90%;
+}
+.containerList:hover {
+  opacity: 100%;
+}
+.containerTask > ul > li {
+  background-color: #f2f2f2;
+  display: flex;
+  margin-top: 30px;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  padding: 20px;
+  border-radius: 5px;
+  -webkit-box-shadow: -1px 0px 12px 2px rgba(0, 0, 0, 0.74);
+  box-shadow: -1px 0px 12px 2px rgba(84, 84, 84, 0.74);
+}
+.inputTask {
+  border: none;
+  outline: none;
+  width: 350px;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+.buttonTask {
+  height: 40px;
+  width: 100px;
+  background-color: rgb(145, 106, 182);
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  float: right;
+  cursor: pointer;
+}
+.buttonTask:hover {
+  background-color: blueviolet;
+}
+img {
+  height: 25px;
+  opacity: 0%;
+  cursor: pointer;
+  transition: opacity 0.5s ease-in-out;
+}
+.containerTask:hover img {
+  opacity: 100%;
 }
